--- a/nginx/conf.d/web.conf
+++ b/nginx/conf.d/web.conf
@@ -5,7 +5,7 @@ upstream plant_shop {
 server {
     listen 80;
 
-    server_name sasho1320.net;
+    server_name plant-shop.sasho1320.net;
 
     location /.well-known/acme-challange/ {
         root /var/www/certbot;
