--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     command: gunicorn plant_shop.wsgi:application --bind 0.0.0.0:8000
     volumes:
       - ./static:/tmp/plant_shop/static
+      - ./media:/home/app/web/media
     ports:
       - 8000:8000
     env_file:
@@ -21,7 +22,7 @@ services:
       - "5432:5432"
     environment:
       POSTGRES_PASSWORD: 
-      POSTGRES_USER: 
+      POSTGRES_USER:
       POSTGRES_DB: plant_shop_db
       PGDATA: /var/lib/postgresql/data/pgdata
     volumes:
@@ -33,6 +34,7 @@ services:
       - 443:443
     volumes:
       - ./static:/home/app/web/static
+      - ./media:/home/app/web/media
       - ./nginx/conf.d:/etc/nginx/conf.d
       - ./nginx/logs:/var/log/nginx
       - ./certbot/www:/var/www/certbot/:ro
