--- a/nginx/conf.d/web.conf
+++ b/nginx/conf.d/web.conf
@@ -21,5 +21,39 @@ server {
     location /static/ {
         alias /home/app/web/static/;
     }
+
+    location /media/ {
+        alias /home/app/web/media/;
+    }
 }
+
+
+    # location / {
+    #     return 301 https://petstagram-demo-demo.tk$request_uri;
+    # }
+
+# server {
+#    listen 443 default_server ssl http2;
+#    listen [::]:443 ssl http2;
+
+#    server_name petstagram-demo-demo.tk;
+
+#    ssl_certificate /etc/nginx/ssl/live/petstagram-demo-demo.tk/fullchain.pem;
+#    ssl_certificate_key /etc/nginx/ssl/live/petstagram-demo-demo.tk/privkey.pem;
+    
+#    location / {
+#        proxy_pass http://petstagram;
+#        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#        proxy_set_header Host $host;
+#        proxy_redirect off;
+#    }
+
+#    location /static/ {
+#        alias /home/app/web/staticfiles/;
+#    }
+
+#    location /media/ {
+#        alias /home/app/web/media/;
+#    }
+# }
  
