--- a/plant_shop/requirements.txt
+++ b/plant_shop/requirements.txt
@@ -1,15 +1,20 @@
 asgiref==3.5.2
+boto3==1.26.29
+botocore==1.29.29
 certifi==2022.12.7
 charset-normalizer==2.1.1
 Django==4.1.3
-django-mailjet==0.3.1
+django-ses==3.2.2
 gunicorn==20.1.0
 idna==3.4
-mailjet-rest==1.3.4
+jmespath==1.0.1
 Pillow==9.3.0
-pip-autoremove==0.10.0
 psycopg2-binary==2.9.5
 pyperclip==1.8.2
+python-dateutil==2.8.2
+pytz==2022.6
 requests==2.28.1
+s3transfer==0.6.0
+six==1.16.0
 sqlparse==0.4.3
 urllib3==1.26.13
