--- a/plant_shop/requirements.txt
+++ b/plant_shop/requirements.txt
@@ -12,6 +12,7 @@ Pillow==9.3.0
 psycopg2-binary==2.9.5
 pyperclip==1.8.2
 python-dateutil==2.8.2
+python-dotenv==1.0.0
 pytz==2022.6
 requests==2.28.1
 s3transfer==0.6.0
